# mainframe

./: .clang-format  .gitignore  CMakeLists.txt  Config.cmake.in  Doxyfile  README.md  annotated.html  annotated_dup.js  classes.html  classmf_1_1__base__frame__row-members.html  classmf_1_1__base__frame__row.html  classmf_1_1__row__proxy.html  classmf_1_1base__frame__iterator-members.html  classmf_1_1base__frame__iterator.html  classmf_1_1frame-members.html  classmf_1_1frame.html  classmf_1_1frame.js  classmf_1_1group.html  classmf_1_1group_3_01index__defn_3_01GroupInds_8_8_8_01_4_00_01Ts_8_8_8_01_4-members.html  classmf_1_1group_3_01index__defn_3_01GroupInds_8_8_8_01_4_00_01Ts_8_8_8_01_4.html  classmf_1_1group_3_01index__defn_3_01GroupInds_8_8_8_01_4_00_01Ts_8_8_8_01_4__coll__graph.map  classmf_1_1group_3_01index__defn_3_01GroupInds_8_8_8_01_4_00_01Ts_8_8_8_01_4__inherit__graph.md5  classmf_1_1mi-members.html  classmf_1_1mi.html  classmf_1_1mi__coll__graph.map  classmf_1_1mi__coll__graph.md5  classmf_1_1series-members.html  classmf_1_1series.html  classmf_1_1series.js  columnindex_8hpp_source.html  dir_ef13a0dde8a8cfab292bcacffff28b5a.html  dir_ef13a0dde8a8cfab292bcacffff28b5a.js  expression_8hpp_source.html  files.html  files_dup.js  frame_8hpp_source.html  frame__iterator_8hpp_source.html  frame__row_8hpp_source.html  functions.html  functions_func.html  (+60 more)
.github/workflows/: cmake.yml  learn-github-actions.yml
docs/: CMakeLists.txt  Dockerfile  Doxyfile  Doxyfile.in  conf.py  index.rst
mainframe/: base.cpp  base.hpp  columnindex.hpp  csv.cpp  csv.hpp  expression.hpp  frame.cpp  frame.hpp  frame_iterator.hpp  frame_row.hpp  group.hpp  grouped_frame.hpp  indexed_frame.hpp  join.hpp  missing.hpp  row_decl.hpp  series.cpp  series.hpp  series_vector.hpp  simd.hpp
mainframe/detail/: base.cpp  base.hpp  expression.hpp  frame.hpp  frame_indexer.hpp  group.hpp  row_proxy.hpp  series_vector.hpp  simd.hpp  uframe.hpp  useries.hpp
mainframe/impl/: frame.hpp  series.hpp
miniframe/: base.cpp  base.hpp  csv.cpp  expression.hpp  frame.cpp  frame.hpp  series.cpp  series.hpp  series_vector.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_1.js  classes_2.js  classes_3.js  classes_5.js  classes_7.js  classes_9.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  pages_0.js  searchdata.js
src/: frame.cpp  series.cpp
tests/: CMakeLists.txt  debug_cout.hpp  loaders_test_main.cpp  mainframe_series_test_main.cpp  mainframe_series_vector_test_main.cpp  mainframe_test_main.cpp  miniframe_series_test_main.cpp  miniframe_series_vector_test_main.cpp
tests/deployment/: CMakeLists.txt  Dockerfile  mftest.cpp
